RESOLVED FIXED35182
RenderSVGResourceMasker causes an Assert on Wind builds during DRT
https://bugs.webkit.org/show_bug.cgi?id=35182
Summary RenderSVGResourceMasker causes an Assert on Wind builds during DRT
Dirk Schulze
Reported 2010-02-19 14:47:10 PST
RenderSVGResourceMasker causes an Assert on Wind builds during DRT
Attachments
Patch (1.89 KB, patch)
2010-02-19 14:58 PST, Dirk Schulze
zimmermann: review+
Dirk Schulze
Comment 1 2010-02-19 14:58:15 PST
Nikolas Zimmermann
Comment 2 2010-02-19 15:03:49 PST
Comment on attachment 49105 [details] Patch Okay for now, as discussed on IRC. r=me.
Eric Seidel (no email)
Comment 3 2010-02-19 16:23:29 PST
Attachment 49105 [details] was posted by a committer and has review+, assigning to Dirk Schulze for commit.
Dirk Schulze
Comment 4 2010-02-20 00:11:51 PST
landed in r55033
Note You need to log in before you can comment on or make changes to this bug.